--- a/templates/primary.html
+++ b/templates/primary.html
@@ -44,5 +44,8 @@
         </div>
       </ul>
     </nav>
+    <div>
+        <img src="{{ url_for('static', filename='images/img.png') }}" style="margin-left: 140px; margin-top: 80px;">
+    </div>
   </body>
 </html>
