--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -1,11 +1,24 @@
 /* UTILITIES */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-   }
+@charset "UTF-8";
+:root {
+  --bs-blue: #0d6efd;
+  --bs-indigo: #6610f2;
+  --bs-purple: #6f42c1;
+  --bs-pink: #d63384;
+  --bs-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  --bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
+  --bs-body-font-family: Lato, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+  --bs-body-font-size: 0.8rem;
+  --bs-body-font-weight: 400;
+  --bs-body-line-height: 1.5;
+  --bs-body-color: #212529;
+  --bs-body-bg: #fff;
+}
+* 
    body {
     background-color: #fff;
+    font-family: var(--bs-body-font-family);
     -webkit-text-size-adjust: 100%;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    }
@@ -14,19 +27,38 @@
    }
    li {
     list-style: none;
-    float: left;
    }
+   html{
+       scroll-behavior: smooth;
+   }
+
+   .favicon{
+    background-image: url('../images/img.png');
+    min-height: 450px;
+    max-width: 80%;
+    margin-left: 110px;
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-size: cover;
+    align-self: center;
+  }
+
    /* NAVBAR STYLING STARTS */
 .navbar {
-    display: block;
-    align-items: center;
-    justify-content: space-between;
-    padding: 20px;
-    background-color: teal;
-    color: #fff;
-   }
+  height: 100%; /* Full-height: remove this if you want "auto" height */
+  width: 200px; /* Set the width of the sidebar */
+  position: fixed; /* Fixed Sidebar (stay in place on scroll) */
+  z-index: 1; /* Stay on top */
+  top: 0; /* Stay at the top */
+  left: 0;
+  background-color: #fff; /* Black */
+  overflow-x: hidden; /* Disable horizontal scroll */
+  justify-content: space-between;
+  padding: 20px;
+  color: black;
+  }
    .nav-links a {
-    color: #fff;
+    color: black;
    }
    /* LOGO */
    .logo {
@@ -34,25 +66,23 @@
    }
    /* NAVBAR MENU */
    .menu {
-    display: flex;
-    gap: 1em;
+    display: inline-block;
+    gap: 1.5em;
+    left: 0%;
     font-size: 18px;
    }
    .menu li:hover {
-    background-color: #4c9e9e;
     transition: 0.3s ease;
    }
    .menu li {
-    padding: 5px 14px;
+    padding-bottom: 20px;
    }
    /* DROPDOWN MENU */
    .services {
     position: relative; 
    }
    .dropdown {
-    background-color: #6daaaa;
     padding: 1em 0;
-    position: absolute; /*WITH RESPECT TO PARENT*/
     display: none;
     top: 35px;
    }
@@ -60,7 +90,7 @@
     margin-top: 10px;
    }
    .dropdown li {
-    padding: 0.5em 1em;
+    padding: 0.3em 1em;
     width: 8em;
     text-align: center;
    }
@@ -119,4 +149,40 @@ input[type=checkbox]{
 
 .inline-block{
     display: inline-block;
+}
+.row {margin: 0 -5px;}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Style the counter cards */
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* this adds the "card" effect */
+  padding: 16px;
+  text-align: center;
+  background-color:#6daaaa;
+}
+
+/* Responsive columns - one column layout (vertical) on small screens */
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+    display: block;
+    margin-bottom: 20px;
+  }
+}
+
+.card-im{
+  width: 80%;
+  margin-top: 10px;
+  height: 300px;
+  padding: 10px;
+}
+
+i{
+  padding-right: 10px;
 }
