--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Categorical Geolocation Heatmap{% endblock %}
+{% block title %}Live Twitter Visualization{% endblock %}
 {% block head %}
     {{ super() }}
 {% endblock %}
