Added geolocation heatmap visualization

--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
             <li><a href="/">Dominant User data </a></li>
             <li><a href="/">Dominant Categories</a></li>
             <li><a href="/">Categorical wordclouds</a></li>
-            <li><a href="/geoheatmap">Categorical Geolocation Heatmap</a></li>
+            <li><a href="{{ url_for('get_geoheatmap') }}">Categorical Geolocation Heatmap</a></li>
             <li><a href="/">Categorical Tweet Analysis</a></li>
           </ul>
         </li>
