--- a/templates/geoheatmap.html
+++ b/templates/geoheatmap.html
@@ -1,7 +1,36 @@
 {% extends "base.html" %}
 {% block title %}Categorical Geolocation Heatmap{% endblock %}
-{% block head %}
-    {{ super() }}
-{% endblock %}
+{% block head %}{{ super() }}{% endblock %}
 {% block content %}
+<div>
+  <div class="row">
+    <div class="column" style="float: left; width: 80%; margin-top: 70px; margin-left: 250px;">
+      <div class="card" id="about">
+        <img src={{ url[0] }} alt="Avatar" class="card-im">
+        <h2>{{ name[0] }}</h2>
+        <p class="content">Geolocation Heatmap</p>
+    </div>
+</div>
+<div class="column" style="float:left; width: 80%; margin-top: 70px; margin-left: 250px;" >
+  <div class="card" id="background">
+    <img src={{ url[1] }} alt="Avatar" class="card-im">
+    <h2>{{ name[1] }}</h2>
+    <p class="content">Geolocation Heatmap</p>
+</div> 
+</div>
+<div class="column" style="float: left; width: 80%; margin-top: 70px; margin-left: 250px;">
+  <div class="card" id="about">
+    <img src={{ url[2] }} alt="Avatar" class="card-im">
+    <h2>{{ name[2] }}</h2>
+    <p class="content">Geolocation Heatmap</p>
+</div>
+</div>
+<div class="column" style="float:left; width: 80%; margin-top: 70px; margin-left: 250px;">
+  <div class="card" id="background">
+    <img src={{ url[3] }} alt="Avatar" class="card-im">
+    <h2>{{ name[3] }}</h2>
+    <p class="content">Geolocation Heatmap</p>
+</div> 
+</div>
+</div>
 {% endblock %}
