--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -32,6 +32,10 @@
        scroll-behavior: smooth;
    }
 
+   h3{
+     color: #212529;
+   }
+
    .favicon{
     background-image: url('../images/img.png');
     min-height: 450px;
@@ -167,6 +171,10 @@ input[type=checkbox]{
   background-color:#6daaaa;
 }
 
+.card:hover {
+  transform: translate3D(0,-1px,0) scale(1.15);
+}
+
 /* Responsive columns - one column layout (vertical) on small screens */
 @media screen and (max-width: 600px) {
   .column {
@@ -186,3 +194,4 @@ input[type=checkbox]{
 i{
   padding-right: 10px;
 }
+
