--- a/templates/query10.html
+++ b/templates/query10.html
@@ -8,30 +8,30 @@
     <div class="row">
         <div class="column" style="float: left; width: 32%; margin-top: 70px; margin-left: 250px;">
           <div class="card" id="about">
-            <img src={{ aa}} alt="Avatar" class="card-im">
+            <img src={{ img1}} alt="Avatar" class="card-im">
             
-            <p class="content">Bar plot for number of negative tweets of top 5 negative tweeters </p>
+            <p class="content">Bar plot for users with max number of tweets in '0' category </p>
           </div>
         </div>
         <div class="column" style="float:left; width: 32%; margin-top: 70px; margin-left: 180px;" >
           <div class="card" id="background">
-            <img src={{ bb}} alt="Avatar" class="card-im">
+            <img src={{ img2}} alt="Avatar" class="card-im">
             
-            <p class="content"> Bar plot for number of positive tweets of top 5 positive tweeters</p>
+            <p class="content"> Bar plot for users with max number of tweets in '1' category</p>
           </div> 
         </div>
         <div class="column" style="float: left; width: 32%; margin-top: 70px; margin-left: 250px;">
             <div class="card" id="about">
-              <img src={{ cc}} alt="Avatar" class="card-im">
+              <img src={{ img3}} alt="Avatar" class="card-im">
               
-              <p class="content">Bar plot of number of followers of negative tweeters </p>
+              <p class="content">Bar plot of most likes of '0' category users </p>
             </div>
           </div>
           <div class="column" style="float:left; width: 32%; margin-top: 70px; margin-left: 180px;">
             <div class="card" id="background">
-              <img src={{ dd}} alt="Avatar" class="card-im">
+              <img src={{ img4}} alt="Avatar" class="card-im">
               
-              <p class="content"> Bar plot of number of followers of positive tweeters</p>
+              <p class="content">Bar plot of most likes of '1' category users</p>
             </div> 
           </div>
         </div>
