--- a/templates/base.html
+++ b/templates/base.html
@@ -31,11 +31,11 @@
           <li class="services">
             <a href="/"><i class="fa fa-line-chart" aria-hidden="true"></i>Visualize</a>
             <ul class="dropdown">
-            <li><a href="/">Dominant User data </a></li>
-            <li><a href="{{ url_for('view_analyse') }}">Dominant Categories</a></li>
-            <li><a href="{{ url_for('view_visualise') }}">Categorical wordclouds</a></li>
-            <li><a href="{{ url_for('get_geoheatmap') }}">Categorical Geolocation Heatmap</a></li>
-            <li><a href="/">Categorical Tweet Analysis</a></li>
+            <li><a href="/">Dominant User data</a></li>
+            <li><a href="{{ url_for('view_bargraph') }}">Dominant Categories</a></li>
+            <li><a href="{{ url_for('view_wordcloud') }}">Categorical Wordclouds</a></li>
+            <li><a href="{{ url_for('view_geoheatmap') }}">Categorical Geolocation Heatmap</a></li>
+            <li><a href="{{ url_for('classify_inputtext') }}">Categorical Tweet Analysis</a></li>
           </ul>
         </li>
           <li class="services">
