--- a/templates/index.html
+++ b/templates/index.html
@@ -8,28 +8,28 @@
     <div class="row">
         <div class="column" style="float: left; width: 32%; margin-top: 70px; margin-left: 250px;">
           <div class="card" id="about">
-            <img src={{ url}} alt="Avatar" class="card-im">
+            <img src={{ url[0]}} alt="Avatar" class="card-im">
             <h2>About</h2>
             <p class="content">WordCloud Desc </p>
           </div>
         </div>
         <div class="column" style="float:left; width: 32%; margin-top: 70px; margin-left: 180px;" >
           <div class="card" id="background">
-            <img src={{ url}} alt="Avatar" class="card-im">
+            <img src={{ url[1]}} alt="Avatar" class="card-im">
             <h2>Background</h2>
             <p class="content"> WordCloud Desc</p>
           </div> 
         </div>
         <div class="column" style="float: left; width: 32%; margin-top: 70px; margin-left: 250px;">
             <div class="card" id="about">
-              <img src={{ url}} alt="Avatar" class="card-im">
+              <img src={{ url[2]}} alt="Avatar" class="card-im">
               <h2>About</h2>
               <p class="content">WordCloud Desc </p>
             </div>
           </div>
           <div class="column" style="float:left; width: 32%; margin-top: 70px; margin-left: 180px;">
             <div class="card" id="background">
-              <img src={{ url}} alt="Avatar" class="card-im">
+              <img src={{ url[2]}} alt="Avatar" class="card-im">
               <h2>Background</h2>
               <p class="content"> WordCloud Desc</p>
             </div> 
