--- a/templates/base.html
+++ b/templates/base.html
@@ -56,4 +56,6 @@
     </nav> 
     <div id="content">{% block content %}{% endblock %}</div>
   </body>
+  {% block javascript %}
+  {% endblock %}
 </html>
