--- a/templates/geoheatmap.html
+++ b/templates/geoheatmap.html
@@ -38,6 +38,14 @@
                 <p class="content">Geolocation Heatmap</p>
             </div> 
         </div>
+        <div class="column" style="float:left; width: 60%; margin-top: 70px; margin-left: 300px;">
+            <div class="card" id="background">
+                <div id='chart4' class='chart4'”></div>
+                <!-- <img src={{ url[3] }} alt="Avatar" class="card-im"> -->
+                <h2>{{ name[3] }}</h2>
+                <p class="content">Geolocation Heatmap</p>
+            </div> 
+        </div>
     </div>
     <div id='chart' class='chart'”></div>
 {% endblock %}
