--- a/templates/inputtext.html
+++ b/templates/inputtext.html
@@ -11,7 +11,7 @@
         <form method="post" style="min-height: 190px; max-width: 40%;position: relative; float: right; margin-top: 195px">
         <p><h4>Enter text to classify</h4></p>
             <label for="tweet" class="l"><b>Tweet</b></label>
-            <input type="text" placeholder="Enter Tweet" name="Tweet" required>
+            <input type="text" placeholder="Enter Tweet" name="text" required>
             <button type="submit" class="btn">Submit</button>
         </form>
     </div>
