--- a/templates/bargraph2.html
+++ b/templates/bargraph2.html
@@ -22,29 +22,29 @@
         <div class="column" style="float: left; width: 32%; margin-top: 70px; margin-left: 250px;">
           <div class="card" id="about">
             <div id='chart1' class='chart'”></div>
-            <h2>About</h2>
-            <p class="content">WordCloud Desc </p>
+            <h2>2-way Fake Classification</h2>
+            <p class="content">Fake | Not Fake </p>
           </div>
         </div>
         <div class="column" style="float:left; width: 32%; margin-top: 70px; margin-left: 180px;" >
           <div class="card" id="background">
             <div id='chart2' class='chart'”></div>
-            <h2>Background</h2>
-            <p class="content"> WordCloud Desc</p>
+            <h2>6-way Fake Classification</h2>
+            <p class="content"> true | satire | misleading | false | imposter | manipulated</p>
           </div> 
         </div>
         <div class="column" style="float: left; width: 32%; margin-top: 70px; margin-left: 250px;">
             <div class="card" id="about">
               <div id='chart3' class='chart'”></div>
-              <h2>About</h2>
-              <p class="content">WordCloud Desc </p>
+              <h2>3-way Hate Classification</h2>
+              <p class="content">Inplicit | Explicit | Not Hate </p>
             </div>
           </div>
           <div class="column" style="float:left; width: 32%; margin-top: 70px; margin-left: 180px;">
             <div class="card" id="background">
               <div id='chart4' class='chart'”></div>
-              <h2>Background</h2>
-              <p class="content"> WordCloud Desc</p>
+              <h2>6-way Hate Classification</h2>
+              <p class="content"> incitement | inferiority | irony | stereotypical | threatening | white grievance</p>
             </div> 
           </div>
         </div>
