Updated user plots

--- a/templates/query10.html
+++ b/templates/query10.html
@@ -94,18 +94,18 @@
 </div>
 <script src='https://cdn.plot.ly/plotly-latest.min.js'></script>
 <script type='text/javascript'>
-  var graphs0 = {{graphJSON0 | safe}};
-  var graphs1 = {{graphJSON1 | safe}};
-  var graphs2 = {{graphJSON2 | safe}};
-  var graphs3 = {{graphJSON3 | safe}};
-  var graphs4 = {{graphJSON4 | safe}};
-  var graphs5 = {{graphJSON5 | safe}};
-  var graph_likes_0={{graphJSON_likes_0|safe}};
-  var graph_likes_1={{graphJSON_likes_1|safe}};
-  var graph_likes_2={{graphJSON_likes_2|safe}};
-  var graph_likes_3={{graphJSON_likes_3|safe}};
-  var graph_likes_4={{graphJSON_likes_4|safe}};
-  var graph_likes_5={{graphJSON_likes_5|safe}};
+  var graphs0 = {{graphJSON[0] | safe}};
+  var graphs1 = {{graphJSON[1] | safe}};
+  var graphs2 = {{graphJSON[2] | safe}};
+  var graphs3 = {{graphJSON[3] | safe}};
+  var graphs4 = {{graphJSON[4] | safe}};
+  var graphs5 = {{graphJSON[5] | safe}};
+  var graph_likes_0={{graphJSON_likes[0]|safe}};
+  var graph_likes_1={{graphJSON_likes[1]|safe}};
+  var graph_likes_2={{graphJSON_likes[2]|safe}};
+  var graph_likes_3={{graphJSON_likes[3]|safe}};
+  var graph_likes_4={{graphJSON_likes[4]|safe}};
+  var graph_likes_5={{graphJSON_likes[5]|safe}};
   Plotly.plot('chart0',graphs0,{});
   Plotly.plot('chart1',graphs1,{});
   Plotly.plot('chart2',graphs2,{});
