--- a/templates/query10.html
+++ b/templates/query10.html
@@ -5,6 +5,9 @@
 {% endblock %}
 {% block content %}
 <div>
+    <div class="column" style="float: left; width: 80%; margin-top: 70px; margin-left: 600px;">
+            <h1>Dominant Users</h1>
+    </div>
     <div class="row">
         <div class="column" style="float: left; width: 32%; margin-top: 70px; margin-left: 250px;">
           <div class="card" id="about">
