--- a/templates/bargraph2.html
+++ b/templates/bargraph2.html
@@ -18,7 +18,7 @@
 {% endblock %}
 {% block content %}
 <div>
-    <div class="column" style="float: left; width: 80%; margin-top: 70px; margin-left: 550px;">
+    <div class="column" style="float: left; width: 80%; margin-left: 550px;">
             <h1>Dominant Categories</h1>
     </div>
     <div class="row">
