--- a/templates/geoheatmap.html
+++ b/templates/geoheatmap.html
@@ -3,7 +3,7 @@
 {% block head %}{{ super() }}{% endblock %}
 {% block content %}
     <div class="row">
-        <div class="column" style="float: left; width: 80%; margin-top: 70px; margin-left: 450px;">
+        <div class="column" style="float: left; width: 80%; margin-left: 450px;">
             <h1>Categorical Geolocation Heatmaps</h1>
         </div>
         <div class="column" style="float: left; width: 60%; margin-top: 70px; margin-left: 350px;">
