--- a/templates/inputtext.html
+++ b/templates/inputtext.html
@@ -4,9 +4,9 @@
     {{ super() }}
 {% endblock %}
 {% block content %}
-    <div class="column" style="float: left; width: 80%; margin-top: 70px; margin-left: 400px;">
-        <h1>Fine-Grained Social Media Content Classification</h1>
-    </div>
+    
+        <h1 style="margin-left: 370px;">Fine-Grained Social Media Content Classification</h1>
+    
     <div class="bg-img">
         <form method="post" style="min-height: 190px; max-width: 40%;position: relative; float: right; margin-top: 195px">
         <p><h4>Enter text to classify</h4></p>
