--- a/templates/network.html
+++ b/templates/network.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/styles.css') }}" />
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
   </head>  
-  <nav class="navbar">
+  <nav class="navbar" style="opacity: 0.8; height: 96.5%;">
     <!-- LOGO -->
     <div class="logo">Twitter Dashboard</div>
     <!-- NAVIGATION MENU -->
