--- a/templates/primary.html
+++ b/templates/primary.html
@@ -5,6 +5,6 @@
 {% endblock %}
 {% block content %}
     <div>
-        <img src="{{ url_for('static', filename='images/img.png') }}" style="margin-left: 180px; margin-top: 80px;">
+        <img src="{{ url_for('static', filename='images/img.png') }}" style="margin-left: 220px; margin-top: 30px; width:80%">
     </div>
 {% endblock %}
