--- a/templates/inputtext.html
+++ b/templates/inputtext.html
@@ -12,7 +12,7 @@
         <p><h4>Enter text to classify</h4></p>
             <!-- <label for="tweet" class="l"><b>Tweet</b></label> -->
             <input type="text" placeholder="Enter Tweet" name="text" required>
-            <button type="submit" class="btn">Submit</button>
+            <button type="submit" class="btn-input">Submit</button>
         </form>
     </div>
     <!-- <div class="column" style="float: left; width: 60%; margin-top: 40px; margin-left: 400px;">
