Fixed homepage styling

--- a/static/assets/css/bootstrap.css
+++ b/static/assets/css/bootstrap.css
@@ -4334,7 +4334,7 @@ input[type="button"].btn-block {
   display: block;
 }
 
-.navbar {
+/*.navbar {
   position: relative;
   display: -ms-flexbox;
   display: flex;
@@ -4345,7 +4345,7 @@ input[type="button"].btn-block {
   -ms-flex-pack: justify;
   justify-content: space-between;
   padding: 0.5rem 1rem;
-}
+}*/
 
 .navbar .container,
 .navbar .container-fluid, .navbar .container-sm, .navbar .container-md, .navbar .container-lg, .navbar .container-xl {
