--- a/templates/home.html
+++ b/templates/home.html
@@ -52,6 +52,7 @@
     </ul>
   </nav> 
 <body>
+  <div class="col-10" style="float:right">
   <!-- Back to top button -->
   <div class="back-to-top"></div>
 
@@ -327,7 +328,7 @@
   <div class="page-section banner-info">
     <div class="wrap bg-image" style="background-image: url(../assets/img/bg_pattern.svg);">
       <div class="container">
-        <div class="row align-items-center">
+        <div class="row align-items-center" style="padding-left:5%; padding-right:5%;">
           <div class="col-lg-6 py-3 pr-lg-5 wow fadeInUp">
             <h2 class="title-section">SEO to Improve Brand <br> Visibility</h2>
             <div class="divider"></div>
@@ -414,7 +415,7 @@
   </div>
 
   <footer class="page-footer bg-image" style="background-image: url(../assets/img/world_pattern.svg);">
-    <div class="container">
+    <!-- <div class="container">
       <div class="row mb-5">
         <div class="col-lg-3 py-3">
           <h3>SEOGram</h3>
@@ -455,7 +456,7 @@
       </div>
 
       <p class="text-center" id="copyright">Copyright &copy; 2020. This template design and develop by <a href="https://macodeid.com/" target="_blank">MACode ID</a></p>
-    </div>
+    </div> -->
   </footer>
 
 <script src="{{ url_for('static', filename='assets/js/jquery-3.5.1.min.js') }}"></script>
@@ -463,6 +464,6 @@
 <script src="{{ url_for('static', filename='assets/js/google-maps.js') }}"></script>
 <script src="{{ url_for('static', filename='assets/vendor/wow/wow.min.js') }}"></script>
 <script src="{{ url_for('static', filename='assets/js/theme.js') }}"></script>
-
+</div>
 </body>
 </html>
