--- a/templates/geoheatmap.html
+++ b/templates/geoheatmap.html
@@ -2,53 +2,79 @@
 {% block title %}Categorical Geolocation Heatmap{% endblock %}
 {% block head %}{{ super() }}{% endblock %}
 {% block content %}
-    <div class="row">
-        <div class="column" style="float: left; width: 80%; margin-left: 450px;">
-            <h1>Categorical Geolocation Heatmaps</h1>
-        </div>
-        <div class="column" style="float: left; width: 60%; margin-top: 70px; margin-left: 350px;">
+<div class="row">
+    <div class="column" style="float: left; width: 80%; margin-left: 450px;">
+        <h1>Categorical Geolocation Heatmaps</h1>
+    </div>
+    <details class="info" style="float: left; width: 65%; margin-left: 300px; margin-top: 60px;" open>
+        <summary>3-way Hate-Offensive Classification</summary>
+        <p>
+        <!-- <div class="column" style="float: left; width: 60%; margin-top: 70px; margin-left: 350px;"> -->
+        <div class="column">
             <div class="card" id="about">
                 <div id='chart1' class='chart1'”></div>
                 <!-- <img src={{ url[0] }} alt="Avatar" class="card-im"> -->
-                <h2>Hate-Offensive 3-way Classification</h2>
+                <h2>3-way Hate-Offensive Classification</h2>
                 <p class="content">hate | offensive | none</p>
             </div>
         </div>
-        <div class="column" style="float:left; width: 60%; margin-top: 70px; margin-left: 350px;" >
-            <div class="card" id="background">
-                <div id='chart2' class='chart2'”></div>
-                <!-- <img src={{ url[1] }} alt="Avatar" class="card-im"> -->
-                <h2>2-way Fake Classification</h2>
-                <p class="content">fake | not fake</p>
-            </div> 
+        </p>
+    </details>
+    <details class="info" style="float: left; width: 65%; margin-left: 300px; margin-top: 40px;">
+        <summary>2-way Fake Classification</summary>
+        <p>
+        <!-- <div class="column" style="float: left; width: 60%; margin-top: 70px; margin-left: 350px;"> -->
+        <div class="column">
+        <div class="card" id="background">
+            <div id='chart2' class='chart2'”></div>
+            <!-- <img src={{ url[1] }} alt="Avatar" class="card-im"> -->
+            <h2>2-way Fake Classification</h2>
+            <p class="content">fake | not fake</p>
         </div>
-        <div class="column" style="float: left; width: 60%; margin-top: 70px; margin-left: 350px;">
-            <div class="card" id="about">
-                <div id='chart3' class='chart3'”></div>
-                <!-- <img src={{ url[2] }} alt="Avatar" class="card-im"> -->
-                <h2>6-way Fake Classification</h2>
-                <p class="content">true | satire | misleading | false | imposter | manipulated</p>
-            </div>
+        </p>
+    </details>
+    <details class="info" style="float: left; width: 65%; margin-left: 300px; margin-top: 40px;">
+        <summary>6-way Fake Classification</summary>
+        <p>
+        <!-- <div class="column" style="float: left; width: 60%; margin-top: 70px; margin-left: 350px;"> -->
+        <div class="column">
+        <div class="card" id="about">
+            <div id='chart3' class='chart3'”></div>
+            <!-- <img src={{ url[2] }} alt="Avatar" class="card-im"> -->
+            <h2>6-way Fake Classification</h2>
+            <p class="content">true | satire | misleading | false | imposter | manipulated</p>
         </div>
-        <div class="column" style="float:left; width: 60%; margin-top: 70px; margin-left: 350px;">
-            <div class="card" id="background">
-                <div id='chart4' class='chart4'”></div>
-                <!-- <img src={{ url[3] }} alt="Avatar" class="card-im"> -->
-                <h2>3-way Hate Classification</h2>
-                <p class="content">implicit | explicit | not hate</p>
-            </div> 
-        </div>
-        <div class="column" style="float:left; width: 60%; margin-top: 70px; margin-left: 350px;">
-            <div class="card" id="background">
-                <div id='chart5' class='chart5'”></div>
-                <!-- <img src={{ url[3] }} alt="Avatar" class="card-im"> -->
-                <!-- <h2>{{ name[3] }}</h2> -->
-                <h2>6-way Hate Classification</h2>
-                <p class="content">incitement | inferiority | irony | stereotypical | threatening | white grievance</p>
-            </div> 
-        </div>
-    </div>
-    <div id='chart' class='chart'”></div>
+        </p>
+    </details>
+    <details class="info" style="float: left; width: 65%; margin-left: 300px; margin-top: 40px;">
+        <summary>3-way Hate Classification</summary>
+        <p>
+        <!-- <div class="column" style="float: left; width: 60%; margin-top: 70px; margin-left: 350px;"> -->
+        <div class="column">
+        <div class="card" id="background">
+            <div id='chart4' class='chart4'”></div>
+            <!-- <img src={{ url[3] }} alt="Avatar" class="card-im"> -->
+            <h2>3-way Hate Classification</h2>
+            <p class="content">implicit | explicit | not hate</p>
+        </div> 
+        </p>
+    </details>
+    <details class="info" style="float: left; width: 65%; margin-left: 300px; margin-top: 40px;">
+        <summary>6-way Hate Classification</summary>
+        <p>
+        <!-- <div class="column" style="float: left; width: 60%; margin-top: 70px; margin-left: 350px;"> -->
+        <div class="column">
+        <div class="card" id="background">
+            <div id='chart5' class='chart5'”></div>
+            <!-- <img src={{ url[3] }} alt="Avatar" class="card-im"> -->
+            <!-- <h2>{{ name[3] }}</h2> -->
+            <h2>6-way Hate Classification</h2>
+            <p class="content">incitement | inferiority | irony | stereotypical | threatening | white grievance</p>
+        </div> 
+        </p>
+    </details>
+</div>
+<div id='chart' class='chart'”></div>
 {% endblock %}
 {% block javascript %}
 <script src='https://cdn.plot.ly/plotly-latest.min.js'></script>
@@ -64,4 +90,5 @@
     Plotly.plot('chart4',graph4,{});
     Plotly.plot('chart5',graph5,{});
 </script>
+<script src="{{ url_for('static', filename='js/accordion.js') }}"></script>
 {% endblock %}
