Contact page url

--- a/templates/home.html
+++ b/templates/home.html
@@ -32,7 +32,7 @@
             <a href="{{ url_for('get_home') }}"><i class="fa fa-home" aria-hidden="true"></i>Home</a>
             <ul class="dropdown">
             <li><a href="/">Background </a></li>
-            <li><a href="/">Contact</a></li>
+            <li><a href="{{ url_for('get_contact') }}">Contact</a></li>
             </ul>
         </li>
         <li class="services">
