--- a/templates/likes5.html
+++ b/templates/likes5.html
@@ -6,7 +6,7 @@
 {% block content %}
 <div>
     <div class="column" style="float: left; width: 80%; margin-left: 600px;">
-            <h1>Dominant Users</h1>
+            <h1>Liked Tweets</h1>
     </div>
     <div class="row">
         
