Added category names

--- a/templates/query10.html
+++ b/templates/query10.html
@@ -12,43 +12,43 @@
         <div class="column" style="float: left; width: 32%; margin-top: 70px; margin-left: 250px;">
           <div class="card" id="about">
             <div id='chart0' class='chart'”></div>
-            <!--<h2>Bar Plot of users with max number of tweets in '0' category</h2>-->
-            <p class="content">Bar Plot of users with max number of tweets in '0' category </p>
+            <!--<h2>Bar Plot of users with max number of tweets in  'true' category</h2>-->
+            <p class="content">Bar Plot of users with max number of tweets in  'true' category </p>
           </div>
         </div>
         <div class="column" style="float:left; width: 32%; margin-top: 70px; margin-left: 180px;" >
           <div class="card" id="background">
             <div id='chart1' class='chart'”></div>
             <!--<h2>About</h2>-->
-            <p class="content">Bar Plot of users with max number of tweets in '1' category </p>
+            <p class="content">Bar Plot of users with max number of tweets in'satire' category </p>
           </div> 
         </div>
         <div class="column" style="float: left; width: 32%; margin-top: 70px; margin-left: 250px;">
             <div class="card" id="about">
               <div id='chart2' class='chart'”></div>
               
-              <p class="content">Bar Plot of users with max number of tweets in '2' category</p>
+              <p class="content">Bar Plot of users with max number of tweets in 'misleading' category</p>
             </div>
         </div>
           <div class="column" style="float:left; width: 32%; margin-top: 70px; margin-left: 180px;">
             <div class="card" id="background">
               <div id='chart3' class='chart'”></div>
               
-              <p class="content">Bar Plot of users with max number of tweets in '3' category</p>
+              <p class="content">Bar Plot of users with max number of tweets in'false' category</p>
             </div> 
           </div>
           <div class="column" style="float: left; width: 32%; margin-top: 70px; margin-left: 250px;">
             <div class="card" id="about">
               <div id='chart4' class='chart'”></div>
               
-              <p class="content">Bar Plot of users with max number of tweets in '4' category</p>
+              <p class="content">Bar Plot of users with max number of tweets in'imposter' category</p>
             </div>
         </div>
           <div class="column" style="float:left; width: 32%; margin-top: 70px; margin-left: 180px;">
             <div class="card" id="background">
               <div id='chart5' class='chart'”></div>
               
-              <p class="content">Bar Plot of users with max number of tweets in '5' category</p>
+              <p class="content">Bar Plot of users with max number of tweets in'manipulated' category</p>
             </div> 
           </div>
           
