--- a/templates/likes5.html
+++ b/templates/likes5.html
@@ -14,42 +14,42 @@
             <div class="card" id="about">
               <div id='chart_0_likes' class='chart'”></div>
               
-              <p class="content">Top most '0' category liked tweets</p>
+              <p class="content">Top most  'true' category liked tweets</p>
             </div>
           </div>
           <div class="column" style="float:left; width: 32%; margin-top: 70px; margin-left: 180px;">
             <div class="card" id="background">
               <div id='chart_1_likes' class='chart'”></div>
               
-              <p class="content">Top most '1' category liked tweets</p>
+              <p class="content">Top most'satire' category liked tweets</p>
             </div> 
           </div>
           <div class="column" style="float: left; width: 32%; margin-top: 70px; margin-left: 250px;">
             <div class="card" id="about">
               <div id='chart_2_likes' class='chart'”></div>
               
-              <p class="content">Top most '2' category liked tweets</p>
+              <p class="content">Top most 'misleading' category liked tweets</p>
             </div>
           </div>
           <div class="column" style="float:left; width: 32%; margin-top: 70px; margin-left: 180px;">
             <div class="card" id="background">
               <div id='chart_3_likes' class='chart'”></div>
               
-              <p class="content">Top most '3' category liked tweets</p>
+              <p class="content">Top most'false' category liked tweets</p>
             </div> 
           </div>
           <div class="column" style="float: left; width: 32%; margin-top: 70px; margin-left: 250px;">
             <div class="card" id="about">
               <div id='chart_4_likes' class='chart'”></div>
               
-              <p class="content">Top most '4' category liked tweets</p>
+              <p class="content">Top most'imposter' category liked tweets</p>
             </div>
           </div>
           <div class="column" style="float:left; width: 32%; margin-top: 70px; margin-left: 180px;">
             <div class="card" id="background">
               <div id='chart_5_likes' class='chart'”></div>
               
-              <p class="content">Top most '5' category liked tweets</p>
+              <p class="content">Top most'manipulated' category liked tweets</p>
             </div> 
           </div>
     </div>
