--- a/templates/home.html
+++ b/templates/home.html
@@ -31,7 +31,7 @@
           <li class="services">
             <a href="{{ url_for('get_home') }}"><i class="fa fa-home" aria-hidden="true"></i>Home</a>
             <ul class="dropdown">
-            <li><a href="/">Background </a></li>
+            <li><a href="{{ url_for('get_background') }}">Background </a></li>
             <li><a href="{{ url_for('get_contact') }}">Contact</a></li>
             </ul>
         </li>
